--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
+  <h1>Connect Four</h1>
+  <h2>The Vertical Checkers Game</h2>
+  <h3>Player 1</h3>
+  <div id="game">
+    <table id="board"></table>
+  </div>
+  <div id="container">
+    <div id="reset">
+      <button class="resetButton">Reset</button></div>
+  </div>
 
-<div id="game">
-  <table id="board"></table>
-</div>
+
 
 <script src="connect4.js"></script>
 
 </body>
 </html>
+  
